Converted google_scholar and ieeexplore to using new search functionality.  Instead of looping inside the search engines module the looping is done outside and the engine's search function merely returns the results based on the inpute criteria.

--- a/settings.py.sample
+++ b/settings.py.sample
@@ -30,3 +30,9 @@ SEARCH_ENGINES = (
     #{ 'engine' : 'ieeexplore',
      #'worksheet_id' : 4 }
 )
+
+# This value represents the stopping threshold for a search done without
+# a set number of search results.  The value should be an integer and represents 
+# the number of consecutive articles without the search criteria in the title 
+# to stop after.
+STOPPING_THRESHOLD = 10
