--- a/settings.py.sample
+++ b/settings.py.sample
@@ -12,15 +12,15 @@ SPREADSHEET_KEY = ""
 # A tuple of lists that each represent a different search string
 # Each search string is represented by a list of strings
 # e.g. ["role", "based", "access", "control"]
-SEARCH_CRITERIA = (
-)
+SEARCH_CRITERIA = [
+]
 
 # Specifies which search engines to get results from
 # Uncomment those you wish to use
 # Place the worksheet_id you wish to use for a given search engine
 # The worksheet_id corresponds to numerical slot that the worksheets appear
 # in the spreadsheet
-SEARCH_ENGINES = (
+SEARCH_ENGINES = [
     #{ 'engine' : "google_scholar", 
      #'worksheet_id' : 1 },
     #{ 'engine' : "citeseerx",
@@ -29,7 +29,7 @@ SEARCH_ENGINES = (
      #'worksheet_id' : 3 },
     #{ 'engine' : 'ieeexplore',
      #'worksheet_id' : 4 }
-)
+]
 
 # This value represents the stopping threshold for a search done without
 # a set number of search results.  The value should be an integer and represents 
